B-12: Corrected method processRegistrationForm in RegistrationHandler